remove deprecated URL constructor
current URL constructor deprecated as of java 20