@@ -16,6 +16,7 @@ import org.wpilib.math.geometry.Translation2d;
 import java.io.IOException;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Arrays;
 import java.util.Map;
@@ -944,7 +945,7 @@ public class LimelightHelpers {
         String urlString = "http://" + sanitizeName(tableName) + ".local:5807/" + request;
         URL url;
         try {
-            url = new URL(urlString);
+            url = URI.create(urlString).toURL();
             return url;
         } catch (MalformedURLException e) {
             System.err.println("bad LL URL");
